fix: add scroll-bar to friends-link part
“If overflow is clipped, a scroll-bar should be added to see the rest
of the content”

Closes #64

--- a/source/css/_partial/main.styl
+++ b/source/css/_partial/main.styl
@@ -196,13 +196,14 @@
     .switch-part2{
         left: 100%;
         top: 20px;
-        overlay-x: hidden;
         overflow-y: auto;
-        max-height: 200px;
+        max-height: 260px;
     }
     .switch-part3{
         left: 200%;
-        line-height: 30px;
+        line-height: 1.6;
+        overflow-y: auto;
+        max-height: 260px;
         .switch-friends-link{
             display: inline-block;
             margin-right: 9px;
